--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="flex flex-col md:flex-row items-center justify-between">
                 <div class="md:w-2/3 mb-8 md:mb-0 animate-slideInLeft">
                     <h1 class="text-4xl md:text-5xl font-bold mb-4">Jayanth Singaladevi</h1>
-                    <h2 class="text-2xl md:text-3xl font-medium mb-6">Sr. Automation Engineer / Sr. SDET</h2>
+                    <h2 class="text-2xl md:text-3xl font-medium mb-6">Sr. Automation Engineer and Sr. SDET</h2>
                     <div class="flex flex-wrap items-center gap-4 mb-6">
                         <div class="flex items-center">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
