Adding additional section

--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                             </div>
                         </div>
                         <ul class="list-disc pl-5 space-y-2 mb-4">
-                            <li>Designed, developed and implemented POM (Page Object Model) based on Automation Testing Framework utilizing JavaScript and TypeScript, Cypress, Jasmine framework for UI application which is developing in Angular (Version14) and Karma with HTML and CSS.</li>
+                            <li>Designed, developed and implemented POM (Page Object Model) based on Automation Testing Framework utilizing JavaScript and TypeScript,Cypress with Mocha framework,Playwright with Javascript which is developing in Angular (Version14) and Karma with HTML and CSS.</li>
                             <li>Used BDD (Behavioral Driven Development) with Cucumber, JavaScript and created Spec files, Conf.js as well as writing test cases.</li>
                             <li>Automated the Test Cases for Regression Testing, Smoke Testing, Positive Testing and Negative Testing in an Agile / Scrum environment.</li>
                             <li>Identifying web elements locators such as ID, Name, Class Name, Tag Name, Link Text, Partial Link Text, Xpath, CSS Selector, ng-binding, ng-options, ng-model and ng-repeater in HTML code to test the web applications under testing.</li>
@@ -485,6 +485,7 @@
                             <li>Prepared SQL Scripts to verify the Database updates, inserts and deletes of the records.</li>
                             <li>Led a team of 8 QA engineers, providing technical guidance and mentoring junior team members.</li>
                             <li>Established QA best practices and testing standards across multiple projects.</li>
+                            <li>Experience in integrating our test automation frameworks with AI tools like Appli tools/Percy for Visual testing and making use of LLMs(GEN AI) for creating test Plans and test automation scripts faster.</li>
                         </ul>
                         <div class="bg-gray-50 p-3 rounded-lg">
                             <p class="text-sm text-gray-600"><strong>Environment:</strong> Agile, Automation, Visual Studio Code, JavaScript, HTML, SQL, AngularJS, Jira, Behavioral Driven Development Framework, Jasmine, POSTMAN, Page Object Model and Jenkins.</p>
@@ -525,6 +526,45 @@
                             <li>Automated Regression Testing on new builds for modification in the application.</li>
                             <li>Participated in Peer Reviews of automated Test Cases.</li>
                         </ul>
+                        
+                    </div>
+                </div>
+            </div>
+             <div class="timeline-item last-item relative">
+                    <div class="timeline-line"></div>
+                    <div class="bg-white rounded-xl shadow-lg p-6">
+                        <div class="flex flex-col md:flex-row md:justify-between md:items-center mb-4">
+                            <div>
+                                <h3 class="text-xl font-bold text-blue-600">Test Automation Engineer</h3>
+                                <p class="text-gray-700">Tata Consultancy Services - Quantas Airlines, Australia</p>
+                            </div>
+                            <div class="flex items-center mt-2 md:mt-0">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
+                                </svg>
+                                <span class="text-gray-500">July 2011 - January 2013</span>
+                            </div>
+                        </div>
+                        <ul class="list-disc pl-5 space-y-2 mb-4">
+                            <li>Created Test Cases on Jira based on User Stories and created Requirement Traceability Matrix (RTM) by linking user stories to Test Cases.</li>
+                            <li>Created test automation framework from scratch using Maven, Selenium WebDriver, TestNG.</li>
+                            <li>Followed Software Development Life Cycle (SDLC) and experienced Agile Scrum Methodology.</li>
+                            <li>Experienced Continuous Integration with Jenkins, Cloud Server and GitHub repository combination.</li>
+                            <li>Proven knowledge of JUnit and Gherkin language to read and write feature files for Cucumber.</li>
+                            <li>Analyzed Business Requirements and Functional Specifications based on SMART criteria and involved in
+                             the preparation of the Test Plan, developed detailed Test Scenarios and Test Cases.</li>
+                            <li>Wrote and executed SQL queries with JDBC for Database and Selenium WebDriver for User Interface (UI) to perform End-to-End tests.</li>
+                            <li>Used Selenium Grid to run Test Cases in multiple browsers and platforms.</li>
+                            <li>Experienced in Eclipse IDE to develop Java scripts using Selenium WebDriver and Cucumber.</li>
+                            <li>Logged defects in Jira with defect type and detail information about the defect.</li>
+                            <li>Experienced in implementing Git as a distributed version control tool and GitHub as a repository.</li>
+                            <li>Performed Data Driven Testing by using Apache POI for writing/reading to/from Excel Sheets.</li>
+                            <li>Performed Back-End Testing by using Java Database Connectivity (JDBC) as a data source and configured SQL queries to fetch data from the database.</li>
+                            <li>Back-End WebServices level testing with RESTful API Testing using Java RESTAssured library and POSTMAN.</li>
+                            <li>Automated Regression Testing on new builds for modification in the application.</li>
+                            <li>Participated in Peer Reviews of automated Test Cases.</li>
+                        </ul>
+                        
                     </div>
                 </div>
             </div>
