--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                         
                     </div>
                 </div>
-                 <div class="timeline-item last-item relative">
+                 <div class="timeline-item last-item relative mt-12">
                     <div class="timeline-line"></div>
                     <div class="bg-white rounded-xl shadow-lg p-6">
                         <div class="flex flex-col md:flex-row md:justify-between md:items-center mb-4">
