--- a/index.html
+++ b/index.html
@@ -446,6 +446,22 @@
                 </div>
             </div>
         </section>
+        <section class="mb-16 bg-white rounded-xl shadow-lg p-8 scroll-trigger">
+    <h2 class="text-3xl font-bold mb-6">Educational Qualification</h2>
+    <div class="space-y-4">
+        <div class="flex items-start">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-600 mr-3 mt-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 01-8 0m8 0a4 4 0 01-8 0m8 0V5a4 4 0 00-8 0v2m8 0a4 4 0 01-8 0m8 0v10a4 4 0 01-8 0V7" />
+            </svg>
+            <div>
+                <h3 class="text-xl font-semibold text-gray-800">Bachelors Of Technology(B.tech)</h3>
+                <p class="text-gray-600">Electrical and Electronics Engineering</p>
+                <p class="text-gray-600">JNT University, Kakinada</p>
+                
+            </div>
+        </div>
+    </div>
+</section>
 
         <!-- Experience Timeline -->
         <section class="mb-16 scroll-trigger">
