--- a/index.html
+++ b/index.html
@@ -292,13 +292,13 @@
                     <h3 class="font-medium">Selenium WebDriver</h3>
                 </div>
                 <div class="skill-badge bg-white p-4 rounded-lg shadow-md text-center">
-                    <div class="tooltip">Protractor - 5 years</div>
+                    <div class="tooltip">Rest-Assured - 5 years</div>
                     <div class="bg-purple-100 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-3">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-purple-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4" />
                         </svg>
                     </div>
-                    <h3 class="font-medium">Protractor</h3>
+                    <h3 class="font-medium">Rest-Assured</h3>
                 </div>
                 <div class="skill-badge bg-white p-4 rounded-lg shadow-md text-center">
                     <div class="tooltip">Cypress - 4.5 years</div>
@@ -391,7 +391,7 @@
             <h2 class="text-3xl font-bold mb-6">Professional Summary</h2>
             <ul class="space-y-3 list-disc pl-5">
                 <li>13+ years of experience in Information Technology as a Quality Assurance through Manual and Automation Testing of software applications.</li>
-                <li>Strong experience with Java, JavaScript, Selenium WebDriver, Protractor, Cypress, JUnit, Cucumber, Gherkin language, TestNG, Maven, Git, AngularJS, QTest, VersionOne, Postman, RestAssured API, Docker and Jenkins tools.</li>
+                <li>Strong experience with Java, JavaScript, Selenium WebDriver, Rest-Assured, Cypress, JUnit, Cucumber, Gherkin language, TestNG, Maven, Git, AngularJS, QTest, VersionOne, Postman, RestAssured API, Docker and Jenkins tools.</li>
                 <li>Solid experience on managing project dependencies, the plugins, and goals to build an automation project using build tool Maven using Project Object Model.</li>
                 <li>Key member in SDLC (Software Development Life Cycle) and STLC (Software Testing Life Cycle).</li>
                 <li>In-depth knowledge of Quality Assurance methodologies and Software Testing techniques such as Smoke Testing, Functional Testing, Regression Testing, Integration Testing, Positive-Negative Testing and Black Box Testing.</li>
