--- a/index.html
+++ b/index.html
@@ -384,6 +384,17 @@
                     <h3 class="font-medium">AI/LLM</h3>
                 </div>
             </div>
+             <!-- New Skill: AI/LLM -->
+                <div class="skill-badge bg-white p-4 rounded-lg shadow-md text-center">
+                    <div class="tooltip">SQL - 1.5 years</div>
+                    <div class="bg-indigo-100 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-3">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-indigo-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z" />
+                        </svg>
+                    </div>
+                    <h3 class="font-medium">SQL</h3>
+                </div>
+            </div>
         </section>
 
         <!-- Professional Summary -->
