--- a/index.html
+++ b/index.html
@@ -318,6 +318,15 @@
                     </div>
                     <h3 class="font-medium">Cucumber</h3>
                 </div>
+                 <div class="skill-badge bg-white p-4 rounded-lg shadow-md text-center">
+                    <div class="tooltip">Postman - 5 years</div>
+                    <div class="bg-purple-100 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-3">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-purple-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4" />
+                        </svg>
+                    </div>
+                    <h3 class="font-medium">Postman</h3>
+                </div>
                 <div class="skill-badge bg-white p-4 rounded-lg shadow-md text-center">
                     <div class="tooltip">REST API Testing - 5 years</div>
                     <div class="bg-pink-100 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-3">
