--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 <body>
     <nav class="bg-blue-600 text-white py-4 fixed top-0 left-0 w-full z-50 shadow-lg">
         <div class="container mx-auto px-4 flex justify-between items-center">
-            <h1 class="text-xl font-bold">Jayanth Singaladevi</h1>
+            <a href="#"><h1 class="text-xl font-bold">Jayanth Singaladevi</h1></a>
             <ul class="flex space-x-6">
                 <li><a href="#certifications" class="hover:text-blue-200 transition duration-300">Certifications</a></li>
                 <li><a href="#skills" class="hover:text-blue-200 transition duration-300">Technical Skills</a></li>
