--- a/index.html
+++ b/index.html
@@ -244,12 +244,30 @@
                             </svg>
                             <span>jayanth248@gmail.com</span>
                         </div>
-                        <div class="flex items-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
-                            </svg>
-                            <span>Hyderabad, INDIA</span>
+                        <div class="flex items-start">
+
+                            <div class="flex items-center relative group">
+
+                                <div class="flex items-center">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-white-600 mr-3"
+                                        fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                            d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                            d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
+                                    </svg>
+                                    <span>Hyderabad, INDIA</span>
+                                </div>
+                                <!-- Tooltip with Google Maps -->
+                                <div class="absolute hidden group-hover:block top-8 left-0 bg-white border border-gray-300 rounded-lg shadow-lg p-2 z-50"
+                                    id="mapTooltip">
+                                    <iframe
+                                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3806.712703671503!2d78.546211874979!3d17.34768098808064!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb99e6c6b6b6b7%3A0x6b6b6b6b6b6b6b6b!2sL.B.%20Nagar%2C%20Hyderabad%2C%20Telangana%2C%20India!5e0!3m2!1sen!2sus!4v1680000000000!5m2!1sen!2sus"
+                                        width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                                        referrerpolicy="no-referrer-when-downgrade">
+                                    </iframe>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <p class="text-lg">13+ years of experience in Information Technology as an Analyst through Manual and Automation Testing of software applications.</p>
