--- a/index.html
+++ b/index.html
@@ -321,11 +321,11 @@
                 </div>
            
             </div>
-            <div class="flex items-center justify-center gap-8">
+            <div class="flex items-center justify-center gap-8 md:gap-16">
                     <!-- Docker Image -->
                     <div class="cert-logo flex flex-col items-center">
-                        <div class="w-40 h-40 mb-4"> <!-- Larger size for Docker image -->
-                            <img src="resources/docker.png" alt="Docker Badge" class="w-full h-full object-contain">
+                        <div class="w-40 h-52 mb-4"> <!-- Larger size for Docker image -->
+                            <img src="docker.png" alt="Docker Badge" class="w-full h-full object-contain">
                         </div>
                         <h3 class="font-semibold text-center">Certified In Docker</h3>
                     </div>
@@ -333,7 +333,7 @@
                     <!-- JavaScript Image -->
                     <div class="cert-logo flex flex-col items-center">
                         <div class="w-32 h-32 mb-4">
-                            <img src="resources/badge-js.png" alt="JavaScript Badge" class="w-full h-full object-contain">
+                            <img src="badge-js.png" alt="JavaScript Badge" class="w-full h-full object-contain">
                         </div>
                         <h3 class="font-semibold text-center">JavaScript Certification</h3>
                     </div>
