--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                     <div class="w-32 h-32 mb-4">
                         <img src="Aws.png" alt="JavaScript Badge" class="w-full h-full object-contain">
                     </div>
-                    <h3 class="font-semibold text-center">certified AWS Cloud Practitioner</h3>
+                    <h3 class="font-semibold text-center">Certified AWS Cloud Practitioner</h3>
                 </div>
                 
                 <!-- ISTQB Certified Tester -->
