--- a/index.html
+++ b/index.html
@@ -586,6 +586,11 @@
                             <li>Implemented automated execution of Smoke and Regression Testing using Jenkins.</li>
                             <li>Experienced in Visual Studio Code to develop JavaScript codes to automate tests.</li>
                             <li>Experienced in Git Version Control tool and GitHub as a remote repository.</li>
+                            <li>Proficient in writing end-to-end tests using Cypress for modern web applications.
+                              Automated UI testing with Cypress, ensuring seamless user experiences across multiple browsers.
+                              Implemented custom Cypress commands to simplify repetitive test steps and enhance maintainability.
+                              Integrated Cypress tests into CI/CD pipelines for continuous deployment workflows.</li>
+                              Skilled in debugging and resolving test failures using Cypress's real-time and detailed error reporting.
                            <li>Playwright Automation with 3 Years of Experience
                             
                             Designed, developed, and maintained end-to-end test automation frameworks using Playwright for web applications, ensuring high test coverage and reliability.
