--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                     <h3 class="font-medium">TypeScript</h3>
                 </div>
                 <div class="skill-badge bg-white p-4 rounded-lg shadow-md text-center">
-                    <div class="tooltip">Selenium WebDriver - 7+ years</div>
+                    <div class="tooltip">Selenium WebDriver - 8+ years</div>
                     <div class="bg-green-100 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-3">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2" />
@@ -399,13 +399,13 @@
                     <h3 class="font-medium">Cypress</h3>
                 </div>
                 <div class="skill-badge bg-white p-4 rounded-lg shadow-md text-center">
-                    <div class="tooltip">Cucumber - 5+ years</div>
+                    <div class="tooltip">Cucumber - 5+ years, Mocha - 5+ Years, Jasmine - 3 Years</div>
                     <div class="bg-red-100 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-3">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-red-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19.428 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v5.172a2 2 0 00.586 1.414l5 5c1.26 1.26.367 3.414-1.415 3.414H4.828c-1.782 0-2.674-2.154-1.414-3.414l5-5A2 2 0 009 10.172V5L8 4z" />
                         </svg>
                     </div>
-                    <h3 class="font-medium">Cucumber</h3>
+                    <h3 class="font-medium">Cucumber,Mocha,Jasmine</h3>
                 </div>
                 <div class="skill-badge bg-white p-4 rounded-lg shadow-md text-center">
                     <div class="tooltip">REST API Testing - 5 years</div>
@@ -432,7 +432,7 @@
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 9l3 3-3 3m5 0h3M5 20h14a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
                         </svg>
                     </div>
-                    <h3 class="font-medium">Jenkins</h3>
+                    <h3 class="font-medium">Jenkins and CI/CD</h3>
                 </div>
                 <div class="skill-badge bg-white p-4 rounded-lg shadow-md text-center">
                     <div class="tooltip">Docker - 4 years</div>
@@ -444,22 +444,22 @@
                     <h3 class="font-medium">Docker</h3>
                 </div>
                 <div class="skill-badge bg-white p-4 rounded-lg shadow-md text-center">
-                    <div class="tooltip">Git - 7 years</div>
+                    <div class="tooltip">Git and GitLab- 7 years</div>
                     <div class="bg-yellow-100 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-3">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-yellow-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
                         </svg>
                     </div>
-                    <h3 class="font-medium">Git</h3>
+                    <h3 class="font-medium">Git and GitLab</h3>
                 </div>
                 <div class="skill-badge bg-white p-4 rounded-lg shadow-md text-center">
-                    <div class="tooltip">AngularJS - 6 years</div>
+                    <div class="tooltip">Agile and Scrum- 8 years</div>
                     <div class="bg-purple-100 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-3">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-purple-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 8h10M7 12h4m1 8l-4-4H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-3l-4 4z" />
                         </svg>
                     </div>
-                    <h3 class="font-medium">AngularJS</h3>
+                    <h3 class="font-medium">Agile and Scrum</h3>
                 </div>
                 <!-- New Skill: Playwright -->
                 <div class="skill-badge bg-white p-4 rounded-lg shadow-md text-center">
@@ -480,6 +480,15 @@
                         </svg>
                     </div>
                     <h3 class="font-medium">AI/LLM</h3>
+                </div>
+                <div class="skill-badge bg-white p-4 rounded-lg shadow-md text-center">
+                    <div class="tooltip">JIRA-2 years and VerionOne - 5 years</div>
+                    <div class="bg-indigo-100 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-3">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-indigo-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z" />
+                        </svg>
+                    </div>
+                    <h3 class="font-medium">JIRA,VersionOne</h3>
                 </div>
             </div>
         </section>
