--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                         <div class="w-32 h-32 mb-4">
                             <img src="badge-js.png" alt="JavaScript Badge" class="w-full h-full object-contain">
                         </div>
-                        <h3 class="font-semibold text-center">JavaScript Certification</h3>
+                        <h3 class="font-semibold text-center">JavaScript Certified</h3>
                     </div>
                 </div>
        
@@ -600,7 +600,7 @@
                               Implemented custom Cypress commands to simplify repetitive test steps and enhance maintainability.
                               Integrated Cypress tests into CI/CD pipelines for continuous deployment workflows.</li>
                               Skilled in debugging and resolving test failures using Cypress's real-time and detailed error reporting.
-                           <li>Playwright Automation with 3 Years of Experience
+                           <li>Playwright Automation with 3 Years of Experience, 
                             
                             Designed, developed, and maintained end-to-end test automation frameworks using Playwright for web applications, ensuring high test coverage and reliability.
                             Automated cross-browser testing workflows on Chromium, Firefox, and WebKit using Playwright, reducing manual testing time by 40%.
