--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                  
                     <p class="text-lg">13+ years of experience in Information Technology as an Analyst through Manual and Automation Testing of software applications.</p>
                 <a href="Jayanth Singaladevi_Sr.Automation Engineer_Resume 2 _1_ (2).pdf" target="_blank">
-                    <button class="bg-blue-800 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded md:mt-4 mt-2">
+                    <button class="bg-blue-800 hover:bg-blue-400 hover:text-black text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded md:mt-4 mt-2">
                         Download CV
                       </button></a> 
                 </div>
